# /UNSTOP/pyproject.toml
[project]
name = "unstop-microservices"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Common dependencies
    "fastapi",
    "redis",
    "pydantic",
    "httpx",
    "uvicorn",
    "boto3",
    "pydantic-settings",
    "python-multipart>=0.0.22",
    "pdfplumber>=0.11.9",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
    "pillow>=12.1.1",
]

[project.optional-dependencies]
fetch = ["requests", "beautifulsoup4"]
ocr = ["pytesseract", "pillow", "opencv-python"]

[tool.uv.workspace]
members = ["src/fetch_service", "src/ocr_worker"]
